--- a/package.json
+++ b/package.json
@@ -14,8 +14,18 @@
     "lint:fix": "tslint --fix 'src/**/*.{ts,tsx}'"
   },
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/express-session": "^1.15.15",
     "@types/graphql": "^14.5.0",
+    "@types/passport": "^1.0.1",
+    "@types/passport-local": "^1.0.33",
+    "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
+    "express-session": "^1.17.0",
     "graphql-yoga": "^1.18.3",
+    "isemail": "^3.2.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "prisma-client-lib": "^1.34.10",
     "ts-node": "^8.4.1",
     "typescript": "^3.7.2"
