--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   },
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express-session": "^1.15.15",
     "@types/graphql": "^14.5.0",
     "@types/passport": "^1.0.1",
     "@types/passport-local": "^1.0.33",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express-session": "^1.17.0",
     "graphql-yoga": "^1.18.3",
     "isemail": "^3.2.0",
