--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "license": "MIT",
   "scripts": {
-    "deploy": "cd src/; prisma deploy",
+    "deploy": "cd src/; prisma deploy --force",
     "dev": "nodemon -e ts,graphql -x ts-node -r dotenv/config src/index.ts",
     "start": "ts-node -r dotenv/config src/index.ts",
     "test": "jest",
