--- a/package.json
+++ b/package.json
@@ -15,17 +15,21 @@
   },
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/dotenv": "^8.2.0",
     "@types/express-session": "^1.15.15",
     "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^8.3.5",
     "@types/passport": "^1.0.1",
     "@types/passport-local": "^1.0.33",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "express-session": "^1.17.0",
     "graphql-yoga": "^1.18.3",
     "isemail": "^3.2.0",
+    "jsonwebtoken": "^8.5.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "prisma-client-lib": "^1.34.10",
